// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Business #Auth #authenticate should reject if no password is provided. 1`] = `
Err {
  "error": Array [
    ErrorMessage {
      "field": "password",
      "message": "required",
      "type": "Error",
      "value": undefined,
    },
  ],
  "variant": "Err",
}
`;

exports[`#Business #Auth #authenticate should reject if no username is provided. 1`] = `
Err {
  "error": Array [
    ErrorMessage {
      "field": "username",
      "message": "required",
      "type": "Error",
      "value": undefined,
    },
    ErrorMessage {
      "field": "password",
      "message": "required",
      "type": "Error",
      "value": undefined,
    },
  ],
  "variant": "Err",
}
`;

exports[`#Business #Auth #authenticate should return a generic error result if it receives no token. 1`] = `
Array [
  ErrorMessage {
    "field": "password",
    "message": "It is not possible to log in right now.",
    "type": "Error",
    "value": "",
  },
]
`;

exports[`#Business #Auth #authenticate should return an error result if it receives a failed credentials validation message from the server 1`] = `
Array [
  ErrorMessage {
    "field": "password",
    "message": "Username and password did not match.",
    "type": "Error",
    "value": "",
  },
]
`;

exports[`#Business #Auth #authenticate should return an error result if it receives an unknown validation message from the server 1`] = `
Array [
  ErrorMessage {
    "field": "password",
    "message": "It is not possible to log in right now.",
    "type": "Error",
    "value": "",
  },
]
`;
